alignment fixed

--- a/src/assets/scss/pages/career-position.scss
+++ b/src/assets/scss/pages/career-position.scss
@@ -21,7 +21,7 @@
 		}
 		.content {
 			p {
-				margin: 0 0 20px !important;
+				margin-bottom: 20px;
 			}
 			ul {
 				padding-left: 20px;
